# resume-tool

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  requirements.txt
data/: Job.csv  cl_template.json  interview_questions.csv  jd_template.json  resume_template.json  sample_jd.json  sample_jd.txt  sample_resume.json
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/api/core/: OpenAPI.ts
frontend/src/api/models/: SignupRequest.ts
frontend/src/api/services/: AuthService.ts
frontend/src/pages/: Dashboard.tsx  HomePage.tsx  Login.tsx  Signup.tsx
migration/src/: m20220101_000001_create_table.rs
output/: output.txt
src/: config.rs  main.rs  questionParser.py
src/endpoints/: auth.rs  mod.rs  tags.rs
src/entity/: user.rs
src/scripts/: query_questions.ipynb
