[package]
name = "resume-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.20"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["openapi-explorer", "chrono"] }
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.183"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
migration = { path = "migration" }
